--- a/app/stylesheets/application.scss
+++ b/app/stylesheets/application.scss
@@ -1,9 +1,8 @@
-@import '_colors';
-@import '_mixins';
-
 @import '_buttons';
-@import '_reset';
+@import '_colors';
 @import '_layout';
-
+@import '_mixins';
+@import '_reset';
+@import '_typography';
 body {
 }
