--- a/app/stylesheets/_layout.scss
+++ b/app/stylesheets/_layout.scss
@@ -3,9 +3,10 @@
   text-align: center;
 }
 
-.ned-header{
+.app-header{
   margin-top: 100px;
   margin-bottom: 100px;
+  text-align: center;
 }
 
 .writing{
