--- a/app/stylesheets/application.css
+++ b/app/stylesheets/application.css
@@ -232,9 +232,13 @@ input[type=button] {
   font-family: avenir; }
 
 .write-text {
-  width: 10px;
-  height: 13px;
-  background: skyblue;
-  resize: none; }
+  width: 20px;
+  height: 20px;
+  background: black;
+  resize: none;
+  border: 1px solid #000000;
+  border-radius: 100%;
+  color: #ffffff;
+  overflow: hidden; }
 
 /*# sourceMappingURL=application.css.map */
